--- a/css/love-story-redesign.css
+++ b/css/love-story-redesign.css
@@ -9,6 +9,7 @@
   overflow: visible;
   background: transparent;
   margin-top: 0;
+  z-index: 1;
 }
 
 /* Blurred Background Layer - Real Image Blur */
@@ -293,11 +294,11 @@
   }
 
   .timeline-event-card:nth-child(odd) {
-    padding-right: 35px;
+    padding-right: 5px;
   }
 
   .timeline-event-card:nth-child(even) {
-    padding-left: 35px;
+    padding-left: 5px;
   }
 
   .timeline-dot {
